# proyecto-facturas

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.yaml  streamlit_app.py
src/facturas/: __init__.py  main.py
tests/: test_basic.py
